--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
       <li><a href="01-color-switcher.html">Color switcher</a></li>
       <li><a href="02-timer.html">Countdown timer</a></li>
       <li><a href="03-promises.html">Promise generator</a></li>
+      <li><a href="session-17(асинхронность, таймеры).html">session-17(асинхронность, таймеры)</a></li>
     </ul>
   </body>
 </html>
