feat: add session 18 promise

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
       <li><a href="02-timer.html">Countdown timer</a></li>
       <li><a href="03-promises.html">Promise generator</a></li>
       <li><a href="session-17(асинхронность, таймеры).html">session-17(асинхронность, таймеры)</a></li>
+      <li><a href="session-18(promise).html">session-18(promise)</a></li>
     </ul>
   </body>
 </html>
