--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <ul>
-      <li><a href="01-color-switcher.html">Color switcher</a></li>
-      <li><a href="02-timer.html">Countdown timer</a></li>
-      <li><a href="03-promises.html">Promise generator</a></li>
-      <li><a href="session-17(асинхронность, таймеры).html">session-17(асинхронность, таймеры)</a></li>
-      <li><a href="session-18(promise).html">session-18(promise)</a></li>
+      <li><a href="./01-color-switcher.html">Color switcher</a></li>
+      <li><a href="./02-timer.html">Countdown timer</a></li>
+      <li><a href="./03-promises.html">Promise generator</a></li>
+      <li><a href="./session-17(асинхронность, таймеры).html">session-17(асинхронность, таймеры)</a></li>
+      <li><a href="./session-18(promise).html">session-18(promise)</a></li>
     </ul>
   </body>
 </html>
