update navigation links

--- a/src/session-17(асинхронность, таймеры).html
+++ b/src/session-17(асинхронность, таймеры).html
@@ -14,7 +14,7 @@
     />
   </head>
   <body>
-    <p><a href="index.html">Go back</a></p>
+    <p><a href="../index.html">Go back</a></p>
 
     <!-- Уведомлялка -->
     <p class="alert success js-alert">Операция проведена успешно!</p>
