update navigation links

--- a/src/session-18(promise).html
+++ b/src/session-18(promise).html
@@ -27,7 +27,7 @@
   </table>
 
   <script
-      src="js/session-18(promise).js"
+      src="./js/session-18(promise).js"
       type="module"
     ></script>
 </body>
