--- a/src/session-17(асинхронность, таймеры).html
+++ b/src/session-17(асинхронность, таймеры).html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Color switcher</title>
-    <link rel="stylesheet" href="css/session-17(асинхронность, таймеры).css" />
+    <link rel="stylesheet" href="./css/session-17(асинхронность, таймеры).css" />
     <!-- ниже стили бутстрапа для модалки-надоедалки -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -61,7 +61,7 @@
       </div>
     </div>
     <script
-      src="js/session-17(асинхронность, таймеры).js"
+      src="./js/session-17(асинхронность, таймеры).js"
       type="module"
     ></script>
   </body>
